[gd_scene load_steps=5 format=3 uid="uid://dgc22y5uorvtp"]

[ext_resource type="Script" path="res://Scene/BattleLists.gd" id="1_jsasr"]
[ext_resource type="PackedScene" uid="uid://jsenx7negnbp" path="res://Scene/enemy_list.tscn" id="2_hmcym"]
[ext_resource type="PackedScene" uid="uid://b1cum44ye8yvp" path="res://Scene/Character.tscn" id="3_nwebe"]
[ext_resource type="PackedScene" uid="uid://cv07x1lbu51v8" path="res://Scene/player_list.tscn" id="4_uy144"]

[node name="BattleLists" type="Node"]
script = ExtResource("1_jsasr")

[node name="enemy_list" parent="." instance=ExtResource("2_hmcym")]

[node name="test_enemy" parent="enemy_list" instance=ExtResource("3_nwebe")]
scale = Vector2(0.5, 0.5)
default_position = Vector2i(2, 2)
character_name = "The Evil One"

[node name="player_list" parent="." instance=ExtResource("4_uy144")]

[node name="Character" parent="player_list" instance=ExtResource("3_nwebe")]
scale = Vector2(0.5, 0.5)
character_name = "Bob"
